@@ -1,3 +1,3 @@
-mobac.version=1.8 alpha 8
+mobac.version=1.8 alpha 8a
 mobac.revision.hide=false
 mobac.updateurl=http://mobac.dnsalias.org/mapsources-update/v1/mapsources.properties
